# gravity-sdk

./: .gitignore  CLAUDE.md  Cargo.toml  deploy-plan.md
.agent/workflows/: deploy.md
.config/: nextest.toml
.github/docker/: rust-ci.Dockerfile
.github/workflows/: build-ci-image.yml  claude-security-review.yml  dependency-check.yml  e2e-docker-nightly.yml  e2e-docker.yml  fmt.yml  gate.yml  migrated-tests.yml  nightly-tests.yml  release.yml  rust-ci.yml  unit-test.yml
aptos-core/consensus/: Cargo.toml
aptos-core/consensus/consensus-types/src/: block.rs  block_retrieval.rs  block_test.rs  wrapped_ledger_info.rs
aptos-core/consensus/proptest-regressions/dag/tests/: order_rule_tests.txt
aptos-core/consensus/safety-rules/src/: fuzzing_utils.rs  test_utils.rs
aptos-core/consensus/safety-rules/src/tests/: suite.rs
aptos-core/consensus/src/: epoch_manager.rs  execution_pipeline.rs  network.rs  network_tests.rs  persistent_liveness_storage.rs  round_manager.rs  round_manager_fuzzing.rs  round_manager_test.rs  state_computer.rs
aptos-core/consensus/src/block_storage/: block_store.rs  block_tree.rs  sync_manager.rs
aptos-core/consensus/src/consensusdb/: mod.rs
aptos-core/consensus/src/dag/tests/: dag_driver_tests.rs  dag_state_sync_tests.rs  dag_test.rs  fetcher_test.rs  order_rule_tests.rs  rb_handler_tests.rs
aptos-core/consensus/src/liveness/: leader_reputation.rs  rotating_proposer_election.rs  rotating_proposer_test.rs
aptos-core/consensus/src/pipeline/: buffer_manager.rs  pipeline_builder.rs
aptos-core/consensus/src/quorum_store/: batch_store.rs
aptos-core/consensus/src/rand/rand_gen/: block_queue.rs
aptos-core/consensus/src/test_utils/: mock_storage.rs  mod.rs
cluster/: Makefile  README.md  cluster.toml.example  deploy.sh  faucet.sh  genesis.sh  genesis.toml.example  init.sh  start.sh  status.sh  stop.sh
cluster/templates/: relayer_config.json.tpl  reth_config.json.tpl  reth_config_pfn.json.tpl  reth_config_pfn_prune.json.tpl  reth_config_vfn.json.tpl  validator.yaml.tpl  validator_full_node.yaml.tpl
cluster/utils/: aggregate_genesis.py  common.sh
crates/proposer-reth-map/: Cargo.toml
docs/: benchmark_report_four_validator.md  gravity-network-optimization.md  gravity-vfn-onchain-discovery-analysis.md  gravity-vfn-sync-logic.md  gravity-vs-aptos-network.md
gravity_e2e/: E2E_TEST_REPORT.md  README.md  build_docker.sh  conftest.py  pytest.ini  requirements.txt  run_docker.sh  run_test.sh  runner.py
scripts/: e2e_test.sh  pfn_pressure_aggregate.py  pfn_pressure_patch_mempool.py  pfn_pressure_run.py  pfn_pressure_sidecar.py
template_config/: reth_config.json
tests/: test_pfn_pressure_aggregate.py  test_pfn_pressure_patch_mempool.py  test_pfn_pressure_run.py  test_pfn_pressure_sidecar.py
todo/: agent-handoff.md  architecture-sync-plan.md  ci-optimization.md  test-migration-analysis.md
(+81 files in other folders)
