[package]
name = "aptos-consensus"
description = "Aptos consensus"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
block-buffer-manager = { workspace = true }
proposer-reth-map = { workspace = true }
anyhow = { workspace = true }
gaptos = { workspace = true }
aptos-executor = { workspace = true }
aptos-mempool = { workspace = true }
aptos-consensus-types = { workspace = true }
aptos-executor-types = { workspace = true }
aptos-safety-rules = { workspace = true }
txn_metrics.workspace = true
async-trait = { workspace = true }
bcs = { workspace = true }
byteorder = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
claims = { workspace = true }
clap = { workspace = true }
dashmap = { workspace = true }
enum_dispatch = { workspace = true }
fail = { workspace = true }
futures = { workspace = true }
futures-channel = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
lru = { workspace = true }
maplit = { workspace = true }
mini-moka = { workspace = true }
mirai-annotations = { workspace = true }

num-derive = { workspace = true }
num-traits = { workspace = true }
once_cell = { workspace = true }
ordered-float = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
blstrs = { version = "0.7.1", features = ["serde", "__private_bench"] }
ff = "0.13"
group = "0.13"
rayon = { workspace = true }
scopeguard = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha3 = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-retry = { workspace = true }
tokio-stream = { workspace = true }
# api-types.workspace = true
arc-swap = "1.7.1"
rocksdb = { workspace = true }


[dev-dependencies]
aptos-consensus-types = { workspace = true, features = ["fuzzing"] }
aptos-mempool = { workspace = true, features = ["fuzzing"] }
aptos-safety-rules = { workspace = true }
claims = { workspace = true }
mockall = { workspace = true }

proptest = { workspace = true }
proptest-derive = { workspace = true }
tempfile = { workspace = true }
rocksdb = { workspace = true }

[features]
default = []
fuzzing = [
    "aptos-consensus-types/fuzzing",
    "aptos-mempool/fuzzing",
    "aptos-safety-rules/testing",
]
failpoints = ["fail/failpoints"]
randomness_disabled = ["gaptos/randomness_disabled"]

[package.metadata.cargo-machete]
ignored = ["serde_bytes"]
